# Pandorians

FrontEnd/: config-overrides.js  package.json  tsconfig.json
FrontEnd/public/: index.html
FrontEnd/public/assets/css/: main.css  wheel.css
FrontEnd/public/assets/js/: main.js
FrontEnd/src/: .App.js.swn  .App.js.swp  App.js  index.css  index.css.map  index.js  index.less
FrontEnd/src/actions/: boxes.js
FrontEnd/src/components/Button/: Button.jsx
FrontEnd/src/components/ContactUs/: index.js
FrontEnd/src/components/Loader/: Loader.jsx  loader.scss
FrontEnd/src/config/: Config_wheels.js  box-nft-mock.js  boxes.js  index.js
FrontEnd/src/pages/: Main.js
FrontEnd/src/reducers/: boxes.js  index.js
FrontEnd/src/solana/: box.js  candy.js  index.js  staking.js  utils.js  wheel.js
FrontEnd/src/store/: store.js
FrontEnd/src/utils/: index.js  mocks.js
Program/: Anchor.toml  README.md  package-lock.json  package.json
Program/client/: mint.ts  programId.ts
Program/client/accounts/: BoxState.ts  OpenRequest.ts  SpinRequest.ts  index.ts
Program/docs/: box.md  staking.md  wheel.md
Program/programs/box/: Cargo.toml
Program/programs/box/src/: lib.rs
Program/programs/box/src/actions/: init.rs  mod.rs  open.rs  put.rs  take.rs  withdraw.rs
Program/programs/staking/: Cargo.toml
Program/programs/wheel/: Cargo.toml
Program/programs/wheel/src/: lib.rs
Program/programs/wheel/src/actions/: close_vrf.rs  global_init.rs  init.rs  mint.rs  mod.rs  sol_spin.rs  sol_take.rs  spin.rs  take.rs  withdraw.rs
Program/tests/: box.ts1  staking.ts1  wheel.ts
(+53 files in other folders)
